Arrows Select/Focus the Second Item When Switching Focus to the View
Affected version
43.0
Steps to reproduce
Open a new window and try to navigate using the arrows
Current behavior
- The first time you select a file/folder it only gets selected by the focus indicator, the one with the outline, and the successive movement it selects with both the focus and the selection indicator. This makes very long to select the first folder in the home page. Screencast_from_2022-11-13_20-51-02
Expected behavior
In previous versions of nautilus the arrow keys selected the first folder, so you could interact with it.