listbase: Select focus before moving cursor

We have built-in keybindings for cursor arrow keys. They move the focus
in the pointed direction and may also select the new focus child.

However, some views allow selection but start with no item selected;
such is the case of nautilus, and 'colors' in GTK Demo. In these views,
pressing an arrow key to initiate the cursor actually moves it to the
next position instead of the first position.

At best, this means we need to take an a extra step to move the cursor
into the first position. At worst, if there is only one child, the
cursor arrow keys don't work at all and the only way to reach the child
is with the Tab key or a pointer.

Instead, let's select the focus item if unselected but selectable. This
was the behavior of GtkTreeView in such cases, which can be tested in
GTK Demo -> Tree View -> Tree Store.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/2618 and https://gitlab.gnome.org/GNOME/nautilus/-/issues/3078